--- a/website/css/style.css
+++ b/website/css/style.css
@@ -7,16 +7,36 @@ section {
     overflow: hidden;
 }
 
-:root {
+/* :root {
     --light-black: #2e2c2caf;
     --bggradient: linear-gradient( to bottom, #f32424, #f8cb2e);
     --light-gray: rgba(255, 255, 255, gray);
     --bgimg: url(../assets/background.jpg);
-}
+} */
 
 header {
-    background: var(--bgimg);
+    background: url(../assets/background.png) no-repeat;
 }
+
+
+nav{
+    margin-top: 30px;
+    background-color: black;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 75px;
+    margin-top: 20px;
+    padding: 10px 90px;
+    box-sizing: border-box;
+    background: rgba(0, 0, 0, 0.6);
+    border-bottom: 0px solid #fff;
+}
+
+
+
+
 
 header a {
     font-family: Arial, Helvetica, sans-serif;
@@ -35,8 +55,10 @@ header .navbar-brand {
     padding-left: 8rem;
 }
 
-header .nav li a:hover {
-    color: black;
+header nav ul,li a:hover {
+    color: black !important; 
+    transition: 0.3s;
+    
 }
 
 header .row .col-md-5 {
