--- a/website/css/style.css
+++ b/website/css/style.css
@@ -7,6 +7,13 @@ section {
     overflow: hidden;
 }
 
+body,
+html {
+    overflow-x: hidden;
+    /* menghilangkan scrool yang ada di bawah */
+}
+
+
 /* :root {
     --light-black: #2e2c2caf;
     --bggradient: linear-gradient( to bottom, #f32424, #f8cb2e);
@@ -14,12 +21,14 @@ section {
     --bgimg: url(../assets/background.jpg);
 } */
 
+
+/* header css */
+
 header {
     background: url(../assets/background.png) no-repeat;
 }
 
-
-nav{
+nav {
     margin-top: 30px;
     background-color: black;
     position: fixed;
@@ -34,13 +43,32 @@ nav{
     border-bottom: 0px solid #fff;
 }
 
-
-
-
-
 header a {
     font-family: Arial, Helvetica, sans-serif;
     font-size: 0.9em;
+}
+
+header .logo {
+    font-size: 25px;
+    color: whitesmoke;
+    font-family: 'Times New Roman', Times, serif;
+}
+
+span {
+    font-family: 'Times New Roman', Times, serif;
+    color: #f8cb2e;
+    font-weight: bold;
+}
+
+header .container.jtronH {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 50px;
+    font-weight: bold;
+}
+
+header .container.jtronP {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-size: 20px;
 }
 
 header .nav-item:last-child {
@@ -55,10 +83,20 @@ header .navbar-brand {
     padding-left: 8rem;
 }
 
-header nav ul,li a:hover {
-    color: black !important; 
-    transition: 0.3s;
-    
+header .logo:hover {
+    color: #f8cb2e !important;
+    transition: 0.5s;
+}
+
+header nav ul,
+li a {
+    font-family: 'Times New Roman', Times, serif;
+}
+
+header nav ul,
+li a:hover {
+    color: #f8cb2e !important;
+    transition: 0.5s;
 }
 
 header .row .col-md-5 {
@@ -68,4 +106,15 @@ header .row .col-md-5 {
 header .row .col-md-7 {
     padding: 22vmin 1vmin;
     padding-bottom: 35vmin;
+}
+
+header .container .col-md-7 p {
+    padding: 1vmin 5vmin;
+}
+
+header .container .col-md-7 button {
+    border-radius: 50px;
+    font-weight: bold;
+    background-color: #f8cb2e;
+    color: #fff;
 }
